@@ -21,6 +21,9 @@
         you normally want to enable in jspwiki.properties, but most people don't
         really want to touch.
         
+        * JSPWIKI-57: Should resolve NotSerializableExceptions when container
+        goes up or down.
+        
 2007-06-14 Dirk Frederickx <dirk.frederickx@gmail.com>
 
         * 2.7.0-svn-41  Many template fixes, added ajaxed edit preview, improved IE6/IE7 compat.
